# ZeroLevelProduct_v2

./: .gitignore  1.0.0  LICENSE  README.md  __init__.py  assemble.py  build_3D_solid.py  claude_pipeline.py  components_3D_primitives.py  components_premade.py  dagmc_convert.py  debug_raw.json  esfr_smart.py  example_reactor_v1_with_rpv_from_function_create_reactor_vessel.py  ihx.py  materials.py  openmc_export.py  profile_built_in_2D_sketch.py  profile_from_straight_connections.py  pyproject.toml  reactor_vessel.py  reactor_vessel_with_utils_not_precise.py  requirements.txt  run_openmc.py  test_assemble.py  top_plate.py  utils.py  zzz_nuextract_pipeline.py
ZeroLevelProduct_V2/: LICENSE  README.md  __init__.py  assemble.py  build_3D_solid.py  components_3D_primitives.py  components_premade.py  example_reactor_v1_with_rpv_from_function_create_reactor_vessel.py  profile_built_in_2D_sketch.py  profile_from_straight_connections.py  pyproject.toml  reactor_vessel.py  reactor_vessel_with_utils_not_precise.py  requirements.txt  test_assemble.py  top_plate.py  utils.py
examples/: __init__.py  claude_pipeline_test1.json  claude_pipeline_test2.json  example_0414_esfr_rv_simple1.json  example_0415_esfr_core_test.json  example_0415_esfr_fuel_assembly_test.json  example_0415_esfr_rv_simple2.json  example_0415_esfr_top_plate.json  example_esfr_smr_ihx_v0.py  example_esfr_smr_ihx_v1.py  example_ihx_pipe.py  example_reactor_v0_basic_3D_components.py  example_reactor_v0_old_basic_3D_components.py  example_reactor_v2_with_rpv_as_a_dict.py  example_test_utube.py  examples_0413_materials.py  examples_0414_claude.py  examples_0414_nuextract_esfr_rv_simple1.py  examples_0414_nuextract_esfr_rv_too_complex.py  examples_0415_ihx_esfr.py  (+23 more)
(+36 files in other folders)
