[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZeroLevelProduct"
version = "0.1.0"
description = "A Python-based 3D CAD modeling library for reactor components using CadQuery"
authors = [{name = "Suarez Gerona"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: CAD",
]
dependencies = [
    "cadquery==2.7.0",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "ocp_vscode==3.1.2",
    "Shapely==2.1.2",
    "openai>=1.0.0",
    "numind",
    "anthropic",
]

[project.urls]
Homepage = "https://github.com/pilarsg3/ZeroLevelLibrary_v1"
Documentation = "https://github.com/pilarsg3/ZeroLevelLibrary_v1#readme"
Repository = "https://github.com/pilarsg3/ZeroLevelLibrary_v1.git"
Issues = "https://github.com/pilarsg3/ZeroLevelLibrary_v1/issues"

[tool.setuptools]
py-modules = [
    "assemble",
    "build_3D_solid",
    "claude_pipeline",
    "components_3D_primitives",
    "components_premade",
    "ihx",
    "materials",
    "nuextract_pipeline",
    "profile_built_in_2D_sketch",
    "profile_from_straight_connections",
    "reactor_vessel",
    "top_plate",
    "utils"
]
packages = ["examples"]
